crates/haneul/tests/snapshots/shell_tests__dont_repin__dont-repin-comment.sh.snap
---
source: crates/haneul/tests/shell_tests.rs
description: tests/shell_tests/dont_repin/dont-repin-comment.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# This should succeed - the manifest has a broken dep, but the lockfile has it pinned to the correct location
# Repinning shouldn't be retriggered just from an added comment
echo '# comment' >> Move.toml
haneul move --client.config $CONFIG build

----- results -----
success: true
exit_code: 0
----- stdout -----

----- stderr -----
INCLUDING DEPENDENCY dep
BUILDING example
