crates/haneul/tests/snapshots/shell_tests__dont_repin__repin-dep.sh.snap
---
source: crates/haneul/tests/shell_tests.rs
description: tests/shell_tests/dont_repin/repin-dep.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# This should fail - the manifest has a broken dep, and although the lockfile
# has it pinned to the correct location, we've edited a dependency's manifest
# so it should cause repinning
echo '[dependencies]' >> locked_dep_path/Move.toml
echo 'another_dep = { local = "../another_dep" }' >> locked_dep_path/Move.toml
haneul move --client.config $CONFIG build

----- results -----
success: false
exit_code: 1
----- stdout -----
Error while loading dependency broken_dep_path: Failed to load dependency `{ local = "broken_dep_path" }`: Invalid directory at `broken_dep_path`

----- stderr -----
